--- a/vue/src/css/EmployeeManage.css
+++ b/vue/src/css/EmployeeManage.css
@@ -57,15 +57,15 @@
 }
 
 
-.btn-box {
+.btn-box1 {
     display: flex;
     align-items: center;
     width: 92.5vw;
     height: 10vh;
 }
 
-.btn-box div {
-    width: 260px;
+.btn-box1 div {
+    width: 150px;
     position: relative;
     display: inline-block;
 }
